--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -10,6 +10,9 @@ body, html {
     padding: 10px;
     text-align: center;
     font-size: 14px;
+    right:5px;
+    top:0;
+    position:absolute;
 }
 
 .gateways a {
