--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -11,6 +11,8 @@ body, html {
     top:0;
     margin:0;
     padding:0;
+    display:flex;
+    text-align:right;
     font-size:10px;
     position:absolute;
 }
