--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -26,8 +26,10 @@ body, html {
 .search-box {
     display: inline-block;
     margin-left: 20px;
+    align-items:right;
     right:5px;
     bottom:5px;
+    background:black;
 }
 
 .search-box input {
