--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -32,6 +32,7 @@ body, html {
 .search-box button {
     background:black;
     font:white;
+    align-items:right;
 }
 
 .search-box button:hover {
