edited search box

--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -27,15 +27,17 @@ body, html {
     display: inline-block;
     text-align:right;
     margin-top: 20px;
+    display:flex;
 }
 
 .search-box button {
     background:black;
     font:white;
     align-items:right;
+    display:flex;
 }
 
-.search-box button:hover {
+#search-box button:hover {
     background:white;
     font:black;
 }
