--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -25,7 +25,7 @@ body, html {
 
 .search-box {
     display: inline-block;
-    justify-content: center;
+    justify-content: right;
     margin-top: 20px;
     display:flex;
     background-color: black;
@@ -46,6 +46,7 @@ body, html {
 
 .search-box input {
     padding: 5px;
+    background: black;
 }
 
 #search-box::placeholder {
