edited search box

--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -31,6 +31,10 @@ body, html {
     position:absolute;
 }
 
+.search-box a{
+    background-color:white;
+}
+
 .search-box button {
     background:black;
     font:white;
