--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -17,7 +17,7 @@ body, html {
     position:absolute;
 }
 
-.gateways a {
+#gateways a:hover {
     color: white;
     text-decoration: none;
     margin: 0 5px;
@@ -38,7 +38,7 @@ body, html {
     display:flex;
 }
 
-.search-box button:hover {
+#search-box button:hover {
     color:white;
     font:black;
 }
