--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -111,7 +111,7 @@ body, html {
     color:black;
 }
 
-#sidebar ul li a:hover {
+.sidebar ul li a:hover {
     background:#CC2E40;
     color:white;
 }
