--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -114,6 +114,7 @@ body, html {
 .sidebar ul li a:hover {
     background:#CC2E40;
     color:white;
+    text-decoration:none;
 }
 
 .sidebar ul .active {
