--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -105,6 +105,7 @@ body, html {
     padding:10px;
     border-bottom:1px solid #ccc;
     font-weight:bold;
+    text-decoration:none;
 }
 
 .sidebar ul li a {
@@ -128,11 +129,17 @@ body, html {
 .my-arts {
     margin-top:10px;
     font-weight:bold;
+    text-align:right;
 }
 
 .my-arts a {
     color:black;
     text-decoration:none;
+}
+
+.my-arts a:hover {
+    background:#CC2E40;
+    color:white;
 }
 
 main {
