--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -161,6 +161,7 @@ main {
 .image-flex {
     display:flex;
     flex-wrap:wrap;
+    width:70%;
     justify-content:space-between;
     gap:20px;
 }
