--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -81,14 +81,56 @@ body {
     transform:scale(1.1);
 }
 
+h2 {
+    font-size:26px;
+    color:#004d80;
+    text-align:center;
+    margin-bottom:20px;
+    font-weight:600;
+}
+
+.assignments, .projects {
+    display:flex;
+    justify-content:center;
+    gap:20px;
+}
+
+.assignment, .project {
+    background-color:#004d80;
+    padding:15px;
+    width:300px;
+    border-radius:5px;
+    text-align:center;
+    box-shadow:2px 2px 10px rgba(0, 0, 0, 0.1);
+    transition:transform 0.3s ease, background-color 0.3s ease;
+}
+
+.assignment h3, .project h3 {
+    font-size:16px;
+    margin-bottom:10px;
+    color:#0080ff;
+}
+
+.assignment img, .project img {
+    width:100%;
+    height:auto;
+    max-height:150px;
+    border-radius:5px;
+    object-fit:cover;
+}
+
+.assignment:hover, .project:hover {
+    transform:scale(1.1);
+}
+
 @media(min-width: 768px) {
-    .assignments {
+    .assignments, .projects {
         flex-direction:column;
         align-items:center;
         text-decoration:none;
     }
 
-    .assignment {
+    .assignment, .project {
         max-width:300px;
         text-decoration:none;
     }
