updated main page style sheet

--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -87,6 +87,7 @@ h2 {
     text-align:center;
     margin-bottom:20px;
     font-weight:600;
+    text-decoration:none;
 }
 
 .assignments, .projects {
