updated main page style sheet

--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -44,7 +44,7 @@ body {
     gap:20px;
 }
 
-.assignment a {
+.assignment a, .project a {
     display:block;
     text-decoration:none;
     width:100%;
