--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -254,14 +254,30 @@ main {
 
 .footer-columns {
     display: flex;
+    flex-wrap:wrap;
     justify-content: space-around;
     background: maroon;
     color: white;
     padding: 20px;
+    gap:20px;
 }
 
 .column h3 {
     border-bottom: 1px solid white;
+}
+
+.footer-columns .column {
+    flex:1 1 calc(100% / 6);
+    min-width:150px;
+}
+
+.footer-columns ul {
+    list-style:none;
+    padding:0;
+}
+
+.fotter-columns ul li {
+    margin-bottom:5px;
 }
 
 .footer-bottom {
