--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -115,7 +115,7 @@ body, html {
     font: white;
     color: maroon;
     display: flex;
-    align-items: left;
+    align-items: center;
     padding: 20px;
 }
 
