--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -104,7 +104,7 @@ body, html {
 
 .search-box input:hover {
     background:white;
-    color:black;
+    font:black;
 }
 
 #search-box::placeholder {
