--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -6,7 +6,6 @@ body, html {
 
 .top-ribbon {
     background: black;
-    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -137,6 +136,7 @@ body, html {
     width:250px;
     background:#f4f4f4;
     padding:20px;
+    flex-shrink:0;
 }
 
 .sidebar ul {
@@ -189,13 +189,13 @@ body, html {
 
 main {
     display:flex;
-    flex-direction:column;
     gap:20px;
     padding:20px;
 }
 
 .content {
     flex-grow:1;
+    padding:20px;
 }
 
 .content .image-flex {
@@ -324,18 +324,30 @@ main {
 .footer-top {
     background: maroon;
     color: white;
-    padding: 20px;
+    padding: 15px 20px;
     text-align: left;
     align-items:center;
+    justify-content:space-between;
     display:flex;
 }
 
-.footer-top h2 {
-    color:white;
+.footer-right {
+    display:flex;
+    align-items:center;
 }
 
-.footer-top h3 {
-    color:#ccc
+.footer-title h1 {
+    margin:0;
+    font-size:28px;
+    font-weight:bold;
+}
+
+.footer-title h3 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 .footer-social img {
