--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -375,6 +375,9 @@ main {
     display:row;
     min-width:150px;
     flex-wrap:wrap;
+    display:grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: auto;
 }
 
 .column h3 {
@@ -409,6 +412,11 @@ main {
     .image-flex {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, auto);  
+    }
+    .footer-columns {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
     }
 
 @media only screen and(max-width:700px) {
