--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -412,6 +412,11 @@ main {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, auto);  
     }
+    .footer-columns {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: auto;
+    }
 
 @media only screen and(max-width:700px) {
     main {
