--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -367,10 +367,11 @@ main {
 }
 
 .footer-columns {
-    justify-content: space-between;
+    justify-content: space-around;
     background: maroon;
     color: white;
     padding: 20px;
+    gap:20px;
     min-width:150px;
     flex-wrap:wrap;
     display:grid;
