--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -374,9 +374,7 @@ main {
     gap:20px;
     min-width:150px;
     flex-wrap:wrap;
-    display:grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: auto;
+    display:row;
 }
 
 .column h3 {
