--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -402,6 +402,19 @@ main {
     padding: 10px;
 }
 
+@meida only screen and(min-width:768px) {
+    main {
+        flex-direction:column;
+        display:flex;
+    }
+    .sidebar {
+        width:100%;
+    }
+    .content {
+        width:100%;
+    }
+}
+
 @media only screen and(max-width:1024px) {
     .gateways {
         display:block;
