--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -402,9 +402,8 @@ main {
     padding: 10px;
 }
 
-@meida only screen and(min-width:768px) {
+@media only screen and(min-width:768px) {
     main {
-        flex-direction:column;
         display:flex;
     }
     .sidebar {
