--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -367,7 +367,7 @@ main {
 }
 
 .footer-columns {
-    justify-content: space-around;
+    justify-content: space-between;
     background: maroon;
     color: white;
     padding: 20px;
