--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -406,6 +406,7 @@ main {
 @media only screen and(min-width:768px) {
     main {
         display:flex;
+        flex-direction:column;
     }
     .sidebar {
         width:100%;
