--- a/csce242/assignments/assignment04/styles.css
+++ b/csce242/assignments/assignment04/styles.css
@@ -407,8 +407,11 @@ main {
     main {
         display:flex;
     }
+    .sidebar {
+        width:100%;
+    }
     .content {
-        flex:1;
+        width:100%;
     }
 }
 
