pushed sript.js example

--- a/csce242/03flex/04_js_intro/styles.css
+++ b/csce242/03flex/04_js_intro/styles.css
@@ -4,6 +4,7 @@
     --primary-color:#2B91AD;
     --gallery-color:#FFB58A;
 }
+
 body {
     background:var(--main-background-color);
     font-family: Arial, Helvetica, sans-serif;
@@ -19,31 +20,39 @@ body {
 
 header, footer {
     background:var(--primary-color);
-    padding:20px 0;
     color:white;
     position:relative;
+    padding:20px 0;
+}
+
+header {
+   /* position:fixed;
+    width:70%;*/
+}
+
+main {
+    padding:5px;
 }
 
 .idea {
     padding:5px;
 }
 
-.idea:nth-child(even) {
+.idea:nth-child( even ) {
     background:var(--main-background-color);
 }
 
 .idea-img {
     margin-top:20px;
     padding:5px;
-    text-align:center;
+    text-align: center;
     position:relative;
-    background:#2B91AD;
-    color:white;
-    bottom:0;
 }
 
 .idea-img p {
-    position:absolute;
+    padding:5px;
+    background:var(--primary-color);
+    color:white;
 }
 
 .gallery {
@@ -51,63 +60,58 @@ header, footer {
 }
 
 .links {
-    background:#CDECEF;
+    background:#D3DDEA;
 }
 
-.tile {
+.tile, .node {
     text-align:center;
     padding:5px;
 }
 
-/* Animation */
+/* Animations */
 #animation-fun {
-    height:200px;
+    background:#a0ccd8;
     padding:20px;
-    background:#CDECEF;
+    height:300px;
     position:relative;
 }
 
 #ball {
-    height:30px;
+    height: 30px;
     width:30px;
-    background:white;
+    background:blue;
     border-radius:50px;
+    animation-name: fun;
     position:relative;
-    animation-name:fun;
-    animation-duration:4s;
-    animation-iteration-count:infinite;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes fun {
-    0% {background-color: red;
+    0% {
+        background-color: red;
         top:0;
         left:0;
     }
-    20% {background-color:orange;}
-    40% {background-color:yellow;}
-    60% {background-color:green;
+    20% {background-color: orange;}
+    40% {background-color: yellow;}
+    60% {background-color:aqua;
         left:100px;
-        top:200px;}
-    80% {background-color:indigo;}
-    100% {background-color:violet;
-    top:200px;
-    left:0;
-}
-}
-
-.gallery {
-    text-wrap:wrap;
-}
-
-main {
-    padding:5px;
-}
+        top:200px;
+    }
+    70% {background-color: green;}
+    80% {background-color: indigo;}
+    100% {
+        background-color: violet;
+        top:0px;
+        left:0;
+    }
+  }
 
 /* Playing with positioning */
 #main-logo {
     position:absolute;
-    top:100px;
-    left:10px;
+    left:50px;
 }
 
 /* Navigation */
@@ -117,34 +121,31 @@ main {
     right:5px;
 }
 
-/* Navigation */
 #main-nav ul, #sub-nav ul {
     padding-left:0;
 }
 
 #main-nav li, #sub-nav li {
-    list-style-type:none;
-    text-align:center;
+    list-style-type: none;  /* remove the bullets */
+    text-align: center;
     border-bottom:1px solid white;
 }
 
 #main-nav li {
-    list-style-type: none;  /* remove the bullets */
-    background:#FFB58A;
+    background:var(--gallery-color);
 }
 
 #sub-nav li {
-    margin:0 5px; /* up and down no margin but right and left 5 */
+    margin:0 5px;
 }
 
-#main-nav a {
+#main-nav a, #sub-nav a {
     color:white;
     text-decoration: none;  /* remove the underlines */
     border-bottom:1px solid transparent;
 }
 
 #main-nav a:hover, #sub-nav a:hover {
-    color:crimson;
     border-bottom:1px solid white;
 }
 
@@ -167,32 +168,42 @@ footer p {
         display:flex;
     }
 
-    #main-vav li {
+    #main-nav li {
         flex:1;
     }
 
     #main-nav li:not(:last-child) {
         border-right: 1px solid white;
     }
-        .one {
-            flex:1;
-        }
-        
-        .two {
-            flex:2;
-        }
-        
-        .three {
-            flex:3;
-        }
-        
-        .tile {
-            width:40%;
-        }
 
-        .idea-img p {
-            padding:5px;
-            background:#2B91AD;
-            margin-top:20px;
+    .gallery {
+        flex-wrap:wrap;
+        justify-content: space-between;
+    }
+
+    .one {
+        flex:1;
+    }
+
+    .two {
+        flex:2;
+    }
+
+    .three {
+        flex:3;
+    }
+
+    .tile {
+        flex-basis:45%;
+    }
+
+    .node {
+        flex-basis:30%;
+    }
+
+    .idea-img p {
+        position:absolute;
+        padding:5px;
+        bottom:0;
     }
 }
