--- a/csce242/assignments/assignment07/styles.css
+++ b/csce242/assignments/assignment07/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f4f5eb;
+    background-color: #1E1E2E;
     text-align: center;
 }
 
@@ -17,12 +17,12 @@ body {
 }
 
 h1 {
-    color: #5d7c7b;
+    color: #A6E3A1;
     font-size: 2rem;
 }
 
 h2 {
-    color: #d37f7f;
+    color: #F28FAD;
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
@@ -34,22 +34,22 @@ h2 {
 }
 
 .card {
-    background: #f9f7e8;
+    background: #313244;
     padding: 20px;
     flex: 1;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 1px solid #A6E3A1;
     cursor: pointer;
 }
 
 .card p {
     font-weight: bold;
-    color: #5d7c7b;
+    color: #C9CBFF;
 }
 
 .hello-text {
     margin-top: 10px;
-    color: #2f6665;
+    color: #A6E3A1;
 }
 
 input[type="color"] {
@@ -60,7 +60,7 @@ input[type="color"] {
 .star {
     font-size: 40px;
     display: block;
-    color: black;
+    color: #F28FAD;
 }
 
 .toggle-image {
@@ -72,7 +72,7 @@ input[type="color"] {
 
 footer {
     margin-top: 20px;
-    color: #5d7c7b;
+    color: #A6E3A1;
 }
 
 @media (max-width: 600px) {
