edited project part 3

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -47,7 +47,8 @@ main {
 }
 
 .highlights, .promotions, .latest-arrivals {
-    flex: 1;
+    display:flex;
+    gap:20px;
     background: white;
     padding: 15px;
     border-radius: 5px;
