align placeholder in about.html

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -46,9 +46,8 @@ main {
     align-items: flex-start;
 }
 
-.highlights, .promotions, .latest-arrivals {
-    display:flex;
-    gap:20px;
+.highlights, .promotions, .latest-arrivals, .about-placeholder {
+    flex: 1;
     background: white;
     padding: 15px;
     border-radius: 5px;
